--- a/ui/src/app/views/rename-modal/component.html
+++ b/ui/src/app/views/rename-modal/component.html
@@ -14,7 +14,7 @@
         <button type="button" class="btn btn-outline" (click)="renaming=false">Cancel</button>
         <button type="button" class="btn btn-primary confirm-rename-btn" id="rename"
                 (click)="this.emitRename(resource);" [clrLoading]="loading" [disabled]="loading">
-            Rename Notebook
+            Rename {{resourceType}}
         </button>
     </div>
 </clr-modal>
