--- a/ui/src/app/views/resource-card/component.html
+++ b/ui/src/app/views/resource-card/component.html
@@ -40,6 +40,7 @@
 
 
 <app-rename-modal [resource]="resourceCard.notebook"
+                  [resourceType]="Notebook"
                   (receiveRename)="receiveNotebookRename($event)"></app-rename-modal>
 
 <app-cohort-edit-modal [cohort]="resourceCard.cohort"
