--- a/ui/src/app/cohort-review/overview-page/overview-page.html
+++ b/ui/src/app/cohort-review/overview-page/overview-page.html
@@ -6,8 +6,8 @@
 <div [ngClass]="[ openChartContainer? 'overview-container': 'overview-small-container']">
   <div>
     <span class="overview-title">Overview</span>
-    <span *ngIf="openChartContainer" (click)="collapseContainer()"><clr-icon shape="play" size="15" style="transform: rotate(90deg);" class="is-solid play-icon"></clr-icon></span>
-    <span *ngIf="!openChartContainer" (click)="getCharts()"><clr-icon size="15" shape="play" style="transform: rotate(270deg);" class="is-solid play-icon"></clr-icon></span>
+    <span *ngIf="openChartContainer" (click)="openChartContainer=!openChartContainer"><clr-icon shape="play" size="15" style="transform: rotate(90deg);" class="is-solid play-icon"></clr-icon></span>
+    <span *ngIf="!openChartContainer" (click)="openChartContainer=!openChartContainer"><clr-icon size="15" shape="play" style="transform: rotate(270deg);" class="is-solid play-icon"></clr-icon></span>
   </div>
   <div class="chart-heading" *ngIf="showTitle && openChartContainer">
     Top 10 {{title}} of Participants in Cohort
@@ -42,15 +42,20 @@
       </app-combo-chart>
       <div *ngIf="showTitle">
         <div class="data-container" *ngFor="let items of domainItems">
-          <div *ngIf="items.name.length >=50" class=" data-heading"
-               [popper]="codesPopper"
-               [popperTrigger]="'hover'"
-               [popperPlacement]="'bottom'">
-            {{items.name}}
-          </div>
-          <div *ngIf="items.name.length < 50" class=" data-heading">
-            {{items.name}}
-          </div>
+          <ng-container *ngIf="items.name.length >=50">
+            <div  class=" data-heading"
+                 [popper]="codesPopper"
+                 [popperTrigger]="'hover'"
+                 [popperPlacement]="'bottom'">
+              {{items.name}}
+            </div>
+          </ng-container>
+       <ng-container  *ngIf="items.name.length < 50">
+         <div class=" data-heading">
+           {{items.name}}
+         </div>
+       </ng-container>
+
           <div class="divider"></div>
           <div class="data-bar-container">
             <div class="light-grey">
