--- a/public-ui/src/app/views/db-home/db-home.component.html
+++ b/public-ui/src/app/views/db-home/db-home.component.html
@@ -29,7 +29,7 @@
         <div class="col-sm-9 col-xs-12>">
           <h5 class="box-title"> Browse Participant Surveys </h5>
           <p class="box-sub-title">
-            View the full content of participant surveys.
+            View full survey content for each survey questionnaire. Explore aggregate views of All of Us participant responses.
           </p>
         </div>
         <div class="col-sm-3  col-xs-12 button-col">
@@ -58,7 +58,8 @@
         <div class="col-sm-9 col-xs-12>">
           <h5 class="box-title"> Browse Program Physical Measurements  </h5>
           <p class="box-sub-title">
-            View distributions of participant results for program physical measurements.
+            Program physical measurements are collected as part of participant enrollment for those participants who agree to provide them.
+            View distributions of participant results for each program physical measurement.
           </p>
         </div>
         <div class="col-sm-3 col-xs-12 button-col">
