--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -69,8 +69,8 @@
           <div class="col-xs-12 db-alert">
             <clr-alert  [clrAlertClosable]="false" [clrAlertType]="info">
               Note: {{items[0].vocabularyId}} {{items[0].conceptCode}} "{{items[0].conceptName}}"
-              maps to a Standard Vocabulary {{standardConcepts[0].vocabularyId}} {{standardConcepts[0].conceptCode}}
-              and any listed below. Standard vocabularies capture data across a variety of source vocabularies.
+              maps to Standard Vocabulary {{standardConcepts[0].vocabularyId}} {{standardConcepts[0].conceptCode}}.
+              Standard vocabularies capture data across a variety of source vocabularies.
             </clr-alert>
           </div>
         </div>
@@ -86,11 +86,11 @@
 
         </div>
         <div class="row expandable-grid-row"
-             *ngFor="let r of items.concat(standardConcepts), let i = index"
+             *ngFor="let r of standardConcepts.concat(items), let i = index"
              [ngClass]="{'expanded-grid-row': r.expanded}" >
           <div class="col-md flex-xs-middle" innerHtml="{{i+1}}. {{r.conceptName | highlightSearch : prevSearchText}}
             -- {{r.conceptId}}"> </div>
-          <div class="col-md flex-xs-middle" innerHtml="{{ r.conceptSynonyms.join(', ') | highlightSearch : prevSearchText}}"> </div>
+          <div class="col-md flex-xs-middle" *ngIf="r.conceptSynonyms" innerHtml="{{ r.conceptSynonyms.join(', ') | highlightSearch : prevSearchText}}"> </div>
           <div class="col-md-2 flex-items-xs-right">
             {{r.countValue | number }}
           </div>
