code results display changes

--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -74,8 +74,8 @@
             </clr-alert>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md grid-header flex-xs-middle"> {{dbDomain.domainDisplay}}</div>
+        <div class="row" *ngIf="standardConcepts.length > 0; else not_standard_concepts">
+          <div class="col-md grid-header flex-xs-middle"> <b>Standard Concept Name</b></div>
           <div class="col-md grid-header flex-xs-middle"> Synonyms </div>
           <div class="col-md-2 grid-header flex-xs-middle"> Participants of <b> {{totalParticipants | number}}</b> </div>
           <div class="col-md-2 grid-header flex-xs-middle info-text">
@@ -83,15 +83,60 @@
             <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon>
           </div>
           <div class="col-md-1 grid-header flex-xs-middle info-text"> View graphs </div>
-
         </div>
+        <ng-template #not_standard_concepts>
+          <div class="row">
+            <div class="col-md grid-header flex-xs-middle"> {{dbDomain.domainDisplay}}</div>
+            <div class="col-md grid-header flex-xs-middle"> Synonyms </div>
+            <div class="col-md-2 grid-header flex-xs-middle"> Participants of <b> {{totalParticipants | number}}</b> </div>
+            <div class="col-md-2 grid-header flex-xs-middle info-text">
+              Vocabulary Code
+              <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon>
+            </div>
+            <div class="col-md-1 grid-header flex-xs-middle info-text"> View graphs </div>
+
+          </div>
+        </ng-template>
         <div class="row expandable-grid-row"
-             *ngFor="let r of standardConcepts.concat(items), let i = index"
+             *ngFor="let r of standardConcepts, let i = index"
              [ngClass]="{'expanded-grid-row': r.expanded}" >
-          <div class="col-md flex-xs-middle" innerHtml="{{i+1}}. {{r.conceptName | highlightSearch : prevSearchText}}
+          <div class="col-md flex-xs-middle" innerHtml="{{r.conceptName | highlightSearch : prevSearchText}}
             -- {{r.conceptId}}"> </div>
           <div class="col-md flex-xs-middle" *ngIf="r.conceptSynonyms" innerHtml="{{ r.conceptSynonyms.join(', ') | highlightSearch : prevSearchText}}"> </div>
-          <div class="col-md-2 flex-items-xs-right">
+          <div class="col-md-2 flex-items-xs-right" style="margin-top: .5rem;">
+            {{r.countValue | number }}
+          </div>
+          <div class="col-md-2 flex-xs-middle">
+            {{r.vocabularyId}} {{r.conceptCode}}
+          </div>
+          <div class="col-md-1 flex-xs-middle">
+            <button class="icon-btn" (click)="r.expanded = !r.expanded">
+              <clr-icon shape="bar-chart" style="height: 1rem; width: 1rem;color: #2691D0;"></clr-icon>
+            </button>
+          </div>
+          <div class="col-xs-12 row-expansion flex-xs-middle" *ngIf="r.expanded">
+            <app-concept-charts [concept]="r" [showMeasurementGenderBins]="showMeasurementGenderBins" [showAge]="showAge" [showGender]="showGender"
+                                [showSources]="showSources" [backgroundColor]="'#ECF1F4'">
+            </app-concept-charts>
+          </div>
+        </div>
+        <div class="row" *ngIf="standardConcepts.length > 0">
+          <div class="col-md grid-header flex-xs-middle"><b>Source Concept Name</b></div>
+          <div class="col-md grid-header flex-xs-middle"> Synonyms </div>
+          <div class="col-md-2 grid-header flex-xs-middle"> Participants of <b> {{totalParticipants | number}}</b> </div>
+          <div class="col-md-2 grid-header flex-xs-middle info-text">
+            Vocabulary Code
+            <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon>
+          </div>
+          <div class="col-md-1 grid-header flex-xs-middle info-text"> View graphs </div>
+        </div>
+        <div class="row expandable-grid-row"
+             *ngFor="let r of items, let i = index"
+             [ngClass]="{'expanded-grid-row': r.expanded}" >
+          <div class="col-md flex-xs-middle" innerHtml="{{r.conceptName | highlightSearch : prevSearchText}}
+            -- {{r.conceptId}}"> </div>
+          <div class="col-md flex-xs-middle" *ngIf="r.conceptSynonyms" innerHtml="{{ r.conceptSynonyms.join(', ') | highlightSearch : prevSearchText}}"> </div>
+          <div class="col-md-2 flex-items-xs-right" style="margin-top: .5rem;">
             {{r.countValue | number }}
           </div>
           <div class="col-md-2 flex-xs-middle">
