changing variable name to make more clear

--- a/ui/src/app/views/cohort-list/component.html
+++ b/ui/src/app/views/cohort-list/component.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div *ngFor="let cohort of resourceList">
-    <app-resource-card [resourceCard]="cohort" [forList]="'for-list'"
+    <app-resource-card [resourceCard]="cohort" [cssClass]="'for-list'"
                        (onUpdate)="reloadCohorts()">
     </app-resource-card>
   </div>
