--- a/ui/src/app/views/notebook-list/component.html
+++ b/ui/src/app/views/notebook-list/component.html
@@ -18,7 +18,7 @@
   </div>
 
   <div *ngFor="let notebook of resourceList">
-    <app-resource-card [resourceCard]="notebook" [forList]="'for-list'"
+    <app-resource-card [resourceCard]="notebook" [cssClass]="'for-list'"
                        (onUpdate)="updateList($event)"
                        (duplicateNameError)="duplicateNameError($event)"
                        (invalidNameError)="invalidNameError($event)">
