--- a/public-ui/src/app/views/quick-search/quick-search.component.html
+++ b/public-ui/src/app/views/quick-search/quick-search.component.html
@@ -32,10 +32,10 @@
       <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-xs-12" *ngFor="let r of domainResults">
           <div class="white-card-box search-result">
             <h5 class="box-title">
-              {{r.domainDisplay}}
+              {{r.name}}
             </h5>
             <div class="card-stat">
-              {{r.countValue | number}}
+              {{r.standardConceptCount | number}}
             </div>
             <p class="card-text bigger">
               <em> <b>concepts </b></em>
@@ -47,7 +47,7 @@
             </p>
 
             <div class="card-text bottom">
-              <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
+              <button class="btn btn-primary" (click)="viewEhrDomain(r)"> View Full List </button>
             </div>
           </div>
       </div>
@@ -62,17 +62,17 @@
       <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" *ngFor="let r of surveyResults">
         <div class="white-card-box search-result">
           <h5 class="box-title">
-            {{r.domainDisplay}}
+            {{r.name}}
           </h5>
           <div class="card-stat">
-            {{r.countValue | number}}
+            {{r.questionCount | number}}
           </div>
           <p class="card-text bigger">
-            There are {{r.countValue }} survey questions on this survey related to your search.
+            There are {{r.questionCount }} survey questions on this survey related to your search.
           </p>
 
           <div class="card-text bottom" >
-            <button class="btn btn-primary" (click)="viewResults(r)"> View Full List </button>
+            <button class="btn btn-primary" (click)="viewSurvey(r)"> View Full List </button>
           </div>
         </div>
       </div>
