lint error fixes

--- a/ui/src/app/cohort-review/review-nav/review-nav.component.html
+++ b/ui/src/app/cohort-review/review-nav/review-nav.component.html
@@ -1,21 +1,1 @@
-<!-- Cohort Review header -->
-<app-overview-charts></app-overview-charts>
-<!--<div class="review-header">-->
-  <!--&lt;!&ndash;<a&ndash;&gt;-->
-    <!--&lt;!&ndash;class="header-link"&ndash;&gt;-->
-    <!--&lt;!&ndash;title="Go to Cohort Overview"&ndash;&gt;-->
-    <!--&lt;!&ndash;routerLink="../overview"&ndash;&gt;-->
-    <!--&lt;!&ndash;routerLinkActive="active">&ndash;&gt;-->
-    <!--&lt;!&ndash;Overview&ndash;&gt;-->
-  <!--&lt;!&ndash;</a>&ndash;&gt;-->
-<!--&lt;!&ndash;<app-detail-all-events></app-detail-all-events>&ndash;&gt;-->
-  <!--&lt;!&ndash;<div class="vert-bar"></div>&ndash;&gt;-->
-
-  <!--&lt;!&ndash;<a&ndash;&gt;-->
-    <!--&lt;!&ndash;class="header-link"&ndash;&gt;-->
-    <!--&lt;!&ndash;title="Go to Participant Browser"&ndash;&gt;-->
-    <!--&lt;!&ndash;routerLink="../participants"&ndash;&gt;-->
-    <!--&lt;!&ndash;routerLinkActive="active">&ndash;&gt;-->
-    <!--&lt;!&ndash;Participants&ndash;&gt;-->
-  <!--&lt;!&ndash;</a>&ndash;&gt;-->
-<!--</div>-->
+<!--<app-overview-charts></app-overview-charts>-->
