--- a/ui/src/app/cohort-review/table-page/table-page.html
+++ b/ui/src/app/cohort-review/table-page/table-page.html
@@ -1,5 +1,4 @@
-<app-review-nav></app-review-nav>
-
+<!--<app-overview-charts></app-overview-charts>-->
 <clr-datagrid
   (clrDgRefresh)="refresh($event)" [clrDgLoading]="loading">
   <clr-dg-placeholder>No Participants</clr-dg-placeholder>
