--- a/ui/src/app/cohort-review/review-nav/review-nav.component.css
+++ b/ui/src/app/cohort-review/review-nav/review-nav.component.css
@@ -1,23 +1,23 @@
-.review-header {
-  display: flex;
-}
+/*.review-header {*/
+  /*display: flex;*/
+/*}*/
 
-.header-link {
-  color: #2691D0;
-  font-weight: 300;
-  font-size: 20px;
-  line-height: 24px;
-}
+/*.header-link {*/
+  /*color: #2691D0;*/
+  /*font-weight: 300;*/
+  /*font-size: 20px;*/
+  /*line-height: 24px;*/
+/*}*/
 
-.active {
-  font-weight: 500;
-}
+/*.active {*/
+  /*font-weight: 500;*/
+/*}*/
 
-.vert-bar {
-  display: inline-block;
-  margin: 0 0.75rem;
-  box-sizing: border-box;
-  height: 17px;
-  width: 1px;
-  border: 1px solid #979797;
-}
+/*.vert-bar {*/
+  /*display: inline-block;*/
+  /*margin: 0 0.75rem;*/
+  /*box-sizing: border-box;*/
+  /*height: 17px;*/
+  /*width: 1px;*/
+  /*border: 1px solid #979797;*/
+/*}*/
